--- a/druid-xml-macro/Cargo.toml
+++ b/druid-xml-macro/Cargo.toml
@@ -10,6 +10,6 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
-syn = "1.0.39"
+syn = {version="1.0.42", features=["full"]}
 quote = "1.0.7"
 proc-macro2 = "1.0.19"
