--- a/druid-xml-example/Cargo.toml
+++ b/druid-xml-example/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 
 
 [dependencies]
+druid-xml = {path="../druid-xml"}
 druid-xml-macro = {path="../druid-xml-macro"}
 druid = "0.7.0"
