--- a/druid-xml/Cargo.toml
+++ b/druid-xml/Cargo.toml
@@ -5,10 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
-quick-xml = "0.26.0"
+quick-xml = "0.27.1"
 simplecss = "0.2.1"
 druid = {version = "0.7.0"}
 
-[feature]
-dynamic = ["druid"]
+[target.'cfg(target_arch="wasm32")'.dependencies]
+wasm-bindgen = "0.2.83"
