--- a/druid-xml/Cargo.toml
+++ b/druid-xml/Cargo.toml
@@ -15,3 +15,4 @@ druid = {version = "0.7.0"}
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 wasm-bindgen = "0.2.83"
+console_error_panic_hook = "0.1.6"
