--- a/druid-xml/Cargo.toml
+++ b/druid-xml/Cargo.toml
@@ -13,6 +13,7 @@ quick-xml = "0.27.1"
 simplecss = "0.2.1"
 #druid = "0.7.0"
 druid = {git="https://github.com/linebender/druid.git"}
+serde_json = "1.0.91"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 wasm-bindgen = "0.2.83"
