--- a/druid-xml/Cargo.toml
+++ b/druid-xml/Cargo.toml
@@ -14,6 +14,7 @@ simplecss = "0.2.1"
 #druid = "0.7.0"
 druid = {git="https://github.com/linebender/druid.git"}
 serde_json = "1.0.91"
+fasteval2 = "2.1.1"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 wasm-bindgen = "0.2.83"
